# pipecat-qwen-megakernel

./: .gitignore  README.md  STATUS.md  pyproject.toml  requirements.txt
docs/: architecture.md
patches/: README.md  __init__.py  apply_patches.py  talker_constants.py  talker_model.py
pipecat_qwen_megakernel/: __init__.py
pipecat_qwen_megakernel/app/: demo.py  demo_daily.py  demo_livekit.py  push_to_talk_client.py  push_to_talk_server.py
pipecat_qwen_megakernel/bench/: bench_kernel.py  bench_stages.py  bench_tts.py  dump_wav.py
pipecat_qwen_megakernel/services/: qwen3_llm_local.py  qwen3_tts_megakernel.py
scripts/: setup.sh
